# python-cli-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.sh  justfile  pyproject.toml  python-cli.spec  research.md
.github/workflows/: ci.yml
docs/: architecture.md  build.md  tdd.md
scripts/: build_exe.ps1  build_exe.sh
src/python_cli/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  utils.py  version.py
src/python_cli/commands/: hello.py
tests/: test_cli.py  test_config.py
