[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "python-cli"
version = "0.1.0"
description = "Generic best-practice Python CLI scaffold"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["cli", "typer", "scaffold", "boilerplate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]

dependencies = [
  "typer>=0.16.0",
  "rich>=14.3.0",
  "loguru>=0.7.3",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
python-cli = "python_cli.cli:app"

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"
Issues = "https://example.com/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/python_cli"]
include = ["src/python_cli/py.typed"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.6.0",
  "pre-commit>=3.8.0",
  "types-python-dateutil>=2.9.0.20240316",
]
build = [
  "pyinstaller>=6.9.0",
]

[tool.pyinstaller]
name = "python-cli"
console = true
onefile = true
clean = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["python_cli"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
plugins = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"



